Changed cassandra-env to dse's env